crates/my-lang/src/parser.rs
// SPDX-License-Identifier: MPL-2.0
// SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>

//! Parser for My Language with AI integration
//!
//! Implements a recursive descent parser for the complete grammar.

use crate::ast::*;
use crate::token::{Span, Token, TokenKind};
use thiserror::Error;

#[derive(Error, Debug, Clone)]
pub enum ParseError {
    #[error("unexpected token: expected {expected}, found {found} at line {line}, column {column}")]
    UnexpectedToken {
        expected: String,
        found: String,
        line: usize,
        column: usize,
    },
    #[error("unexpected end of input")]
    UnexpectedEof,
    #[error("invalid literal: {0}")]
    InvalidLiteral(String),
    #[error("expression nesting depth exceeds limit ({limit}) at line {line}, column {column}; refactor deeply nested expressions (e.g. parenthesized or chained calls) into intermediate `let` bindings")]
    ExpressionTooDeep {
        limit: usize,
        line: usize,
        column: usize,
    },
}

pub type ParseResult<T> = Result<T, ParseError>;

/// Maximum expression nesting depth the recursive-descent parser will descend
/// through before emitting [`ParseError::ExpressionTooDeep`] and unwinding the
/// in-flight expression.
///
/// Independently derived from the parser's own stack budget (not a fixed
/// ratio of `checker::MAX_EXPR_DEPTH`): each step of expression nesting
/// re-enters `parse_expr` and walks the full precedence chain
/// (`parse_or_expr` → … → `parse_postfix_expr` → `parse_primary_expr`),
/// adding roughly a dozen native stack frames per nesting level. In debug
/// builds with a 1 MiB default test-thread stack (Windows), that puts the
/// hard `STATUS_STACK_OVERFLOW` boundary at roughly ~140 depth — so the
/// guard has to fire well before that. 64 leaves a comfortable margin on
/// every platform/build-mode the test suite runs on, while still accepting
/// any human-authored expression (real code rarely nests past depth 5–10).
///
/// This is the *operational* ceiling: because the parser errors here, no
/// parsed program ever reaches `checker::MAX_EXPR_DEPTH` (re-derived to 128
/// from a measured ≈4.4 KiB/level checker-stack budget in my-lang#37); the
/// checker guard only bounds programmatically-constructed ASTs.
/// See hyperpolymath/my-lang#15 / #1 / #37.
pub const MAX_PARSE_EXPR_DEPTH: usize = 64;

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
    errors: Vec<ParseError>,
    /// Current expression-recursion depth, tracked at every entry to
    /// [`Parser::parse_expr`]. Bounded by [`MAX_PARSE_EXPR_DEPTH`].
    expr_depth: usize,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self {
            tokens,
            pos: 0,
            errors: Vec::new(),
            expr_depth: 0,
        }
    }

    /// Parse the token stream into a `Program`.
    ///
    /// This always returns `Ok(Program { items })` containing whichever
    /// top-level items were successfully parsed; any errors encountered
    /// during recovery are collected in `self.errors` and exposed via
    /// [`Parser::errors`]. Callers that want a single-error contract
    /// (e.g. the crate-level `parse` wrapper) should inspect
    /// `parser.errors()` after this call and surface the first one.
    ///
    /// Why `Ok` even with errors: tests like
    /// `test_error_recovery_sync_at_semicolon` exercise the recovery
    /// path and expect to see the partial AST alongside the error list;
    /// returning `Err` here would throw away every successfully-parsed
    /// item on the first stray token.
    pub fn parse_program(&mut self) -> ParseResult<Program> {
        let mut items = Vec::new();
        while !self.is_at_end() {
            let saved_pos = self.pos;
            match self.parse_top_level() {
                Ok(item) => items.push(item),
                Err(err) => {
                    self.errors.push(err);
                    self.synchronize();
                    // Forward-progress guarantee: if neither parse_top_level
                    // nor synchronize consumed a token (e.g. we Err'd at a
                    // sync-point token like `}` and synchronize returned at
                    // the same `}` without advancing), force one step so the
                    // outer loop terminates. Without this, deeply-nested or
                    // unbalanced inputs that trip the depth guard can spin
                    // forever pushing the same error until OOM.
                    if self.pos == saved_pos {
                        self.advance();
                    }
                }
            }
        }

        Ok(Program { items })
    }

    /// Synchronize after a parse error by advancing to the next synchronization point.
    /// Synchronization points are:
    /// - Semicolons (end of statement)
    /// - Closing braces (end of block)
    /// - Keywords that start new declarations (fn, struct, let, etc.)
    fn synchronize(&mut self) {
        while !self.is_at_end() {
            // If we just passed a semicolon, we're synchronized
            if let Some(prev) = self.tokens.get(self.pos.saturating_sub(1)) {
                if prev.kind == TokenKind::Semicolon {
                    return;
                }
            }

            // Check if current token is a synchronization point
            match self.peek_kind() {
                Some(TokenKind::Fn) |
                Some(TokenKind::Struct) |
                Some(TokenKind::Effect) |
                Some(TokenKind::Use) |
                Some(TokenKind::Let) |
                Some(TokenKind::If) |
                Some(TokenKind::Return) |
                Some(TokenKind::Agent) |
                Some(TokenKind::Ensemble) |
                Some(TokenKind::AiModel) |
                Some(TokenKind::Prompt) |
                Some(TokenKind::Comptime) |
                Some(TokenKind::RBrace) => return,
                _ => self.advance(),
            };
        }
    }

    /// Get all parse errors collected during error recovery
    pub fn errors(&self) -> &[ParseError] {
        &self.errors
    }

    // ============================================
    // Top-Level Declarations
    // ============================================

    fn parse_top_level(&mut self) -> ParseResult<TopLevel> {
        // Check for modifiers/attributes first
        if self.check(TokenKind::HashBracket) {
            let modifiers = self.parse_attributes()?;
            return self.parse_top_level_with_modifiers(modifiers);
        }

        match self.peek_kind() {
            Some(TokenKind::Fn) => {
                Ok(TopLevel::Function(self.parse_fn_decl(vec![])?))
            }
            Some(TokenKind::Ident) if self.peek_literal() == Some("async") => {
                Ok(TopLevel::Function(self.parse_fn_decl(vec![])?))
            }
            Some(TokenKind::Struct) => Ok(TopLevel::Struct(self.parse_struct_decl(vec![])?)),
            Some(TokenKind::Effect) => Ok(TopLevel::Effect(self.parse_effect_decl()?)),
            Some(TokenKind::Use) => Ok(TopLevel::Import(self.parse_import_decl()?)),
            Some(TokenKind::Comptime) => {
                // Check if this is "comptime orchestrate" or just "comptime { }"
                let start = self.current_span();
                self.advance(); // consume 'comptime'
                if self.check(TokenKind::Orchestrate) {
                    Ok(TopLevel::Orchestrate(self.parse_orchestrate_decl()?))
                } else {
                    // Put back 'comptime' logically by parsing the block
                    let block = self.parse_block()?;
                    let span = self.span_from(start);
                    Ok(TopLevel::Comptime(ComptimeDecl { block, span }))
                }
            }
            Some(TokenKind::Let) => {
                // Could be arena declaration
                let start = self.current_span();
                self.advance();
                let name = self.parse_ident()?;
                self.expect(TokenKind::Eq)?;
                // Check for Arena::new()
                if self.check(TokenKind::Ident) && self.peek_literal() == Some("Arena") {
                    self.advance();
                    self.expect(TokenKind::ColonColon)?;
                    self.expect_ident("new")?;
                    self.expect(TokenKind::LParen)?;
                    self.expect(TokenKind::RParen)?;
                    self.expect(TokenKind::Semicolon)?;
                    let span = self.span_from(start);
                    Ok(TopLevel::Arena(ArenaDecl { name, span }))
                } else {
                    Err(self.error("Arena::new()"))
                }
            }
            Some(TokenKind::AiModel) => Ok(TopLevel::AiModel(self.parse_ai_model_decl()?)),
            Some(TokenKind::Prompt) => Ok(TopLevel::Prompt(self.parse_prompt_decl()?)),
            Some(TokenKind::Agent) => Ok(TopLevel::Agent(self.parse_agent_decl()?)),
            Some(TokenKind::Ensemble) => Ok(TopLevel::Ensemble(self.parse_ensemble_decl()?)),
            _ => Err(self.error("top-level declaration")),
        }
    }

    fn parse_top_level_with_modifiers(&mut self, attrs: Vec<Attribute>) -> ParseResult<TopLevel> {
        match self.peek_kind() {
            Some(TokenKind::Fn) => {
                let modifiers = self.attrs_to_fn_modifiers(attrs);
                Ok(TopLevel::Function(self.parse_fn_decl(modifiers)?))
            }
            Some(TokenKind::Ident) if self.peek_literal() == Some("async") => {
                let modifiers = self.attrs_to_fn_modifiers(attrs);
                Ok(TopLevel::Function(self.parse_fn_decl(modifiers)?))
            }
            Some(TokenKind::Struct) => {
                let modifiers = self.attrs_to_struct_modifiers(attrs);
                Ok(TopLevel::Struct(self.parse_struct_decl(modifiers)?))
            }
            _ => Err(self.error("fn or struct after attributes")),
        }
    }

    fn attrs_to_fn_modifiers(&self, attrs: Vec<Attribute>) -> Vec<FnModifier> {
        attrs.into_iter().filter_map(|a| match a {
            Attribute::Safe => Some(FnModifier::Safe),
            Attribute::AiOptimize => Some(FnModifier::AiOptimize),
            Attribute::AiTest => Some(FnModifier::AiTest),
            Attribute::AiHint(s) => Some(FnModifier::AiHint(s)),
            Attribute::AiCache => Some(FnModifier::AiCache),
            Attribute::Comptime => Some(FnModifier::Comptime),
            _ => None,
        }).collect()
    }

    fn attrs_to_struct_modifiers(&self, attrs: Vec<Attribute>) -> Vec<StructModifier> {
        attrs.into_iter().filter_map(|a| match a {
            Attribute::AiGenerate => Some(StructModifier::AiGenerate),
            Attribute::Derive(items) => Some(StructModifier::Derive(items)),
            _ => None,
        }).collect()
    }

    // ============================================
    // AI Declarations
    // ============================================

    fn parse_ai_model_decl(&mut self) -> ParseResult<AiModelDecl> {
        let start = self.current_span();
        self.expect(TokenKind::AiModel)?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::LBrace)?;

        let mut attributes = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            attributes.push(self.parse_ai_model_attr()?);
        }

        self.expect(TokenKind::RBrace)?;
        let span = self.span_from(start);

        Ok(AiModelDecl { name, attributes, span })
    }

    fn parse_ai_model_attr(&mut self) -> ParseResult<AiModelAttr> {
        let attr_name = self.parse_ident()?;
        self.expect(TokenKind::Colon)?;

        let attr = match attr_name.name.as_str() {
            "provider" => {
                let value = self.parse_string_lit()?;
                AiModelAttr::Provider(value)
            }
            "model" => {
                let value = self.parse_string_lit()?;
                AiModelAttr::Model(value)
            }
            "temperature" => {
                let value = self.parse_float_lit()?;
                AiModelAttr::Temperature(value)
            }
            "cache" => {
                let value = self.parse_bool_lit()?;
                AiModelAttr::Cache(value)
            }
            _ => return Err(self.error("valid ai_model attribute")),
        };

        // Optional separator/trailing comma, matching struct-field syntax.
        if self.check(TokenKind::Comma) {
            self.advance();
        }

        Ok(attr)
    }

    fn parse_prompt_decl(&mut self) -> ParseResult<PromptDecl> {
        let start = self.current_span();
        self.expect(TokenKind::Prompt)?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::LBrace)?;
        let template = self.parse_string_lit()?;
        self.expect(TokenKind::RBrace)?;
        let span = self.span_from(start);

        Ok(PromptDecl { name, template, span })
    }

    // ============================================
    // Ensemble Declarations (Agent, Ensemble, Workflow)
    // ============================================

    fn parse_agent_decl(&mut self) -> ParseResult<AgentDecl> {
        let start = self.current_span();
        self.expect(TokenKind::Agent)?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::LBrace)?;

        let mut capabilities = Vec::new();
        let mut constraints = Vec::new();
        let mut properties = Vec::new();
        let mut functions = Vec::new();

        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            // Check for field declarations
            if self.check(TokenKind::Capabilities) {
                self.advance();
                self.expect(TokenKind::Colon)?;
                self.expect(TokenKind::LBracket)?;
                while !self.check(TokenKind::RBracket) && !self.is_at_end() {
                    capabilities.push(self.parse_ident()?);
                    if !self.check(TokenKind::RBracket) {
                        self.expect(TokenKind::Comma)?;
                    }
                }
                self.expect(TokenKind::RBracket)?;
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Constraints) {
                self.advance();
                self.expect(TokenKind::Colon)?;
                self.expect(TokenKind::LBracket)?;
                while !self.check(TokenKind::RBracket) && !self.is_at_end() {
                    constraints.push(self.parse_ident()?);
                    if !self.check(TokenKind::RBracket) {
                        self.expect(TokenKind::Comma)?;
                    }
                }
                self.expect(TokenKind::RBracket)?;
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Stateless) {
                self.advance();
                self.expect(TokenKind::Colon)?;
                let value = self.check(TokenKind::True);
                self.advance();
                properties.push(AgentProperty::Stateless(value));
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Stateful) {
                self.advance();
                self.expect(TokenKind::Colon)?;
                let value = self.check(TokenKind::True);
                self.advance();
                properties.push(AgentProperty::Stateful(value));
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Singleton) {
                self.advance();
                self.expect(TokenKind::Colon)?;
                let value = self.check(TokenKind::True);
                self.advance();
                properties.push(AgentProperty::Singleton(value));
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Ident) && self.peek_literal() == Some("model") {
                self.advance();
                self.expect(TokenKind::Colon)?;
                let model = self.parse_string_lit()?;
                properties.push(AgentProperty::Model(model));
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Fn) {
                functions.push(self.parse_fn_decl(vec![])?);
            } else {
                return Err(self.error("agent body item"));
            }
        }

        self.expect(TokenKind::RBrace)?;
        let span = self.span_from(start);

        Ok(AgentDecl {
            name,
            capabilities,
            constraints,
            properties,
            functions,
            span,
        })
    }

    fn parse_ensemble_decl(&mut self) -> ParseResult<EnsembleDecl> {
        let start = self.current_span();
        self.expect(TokenKind::Ensemble)?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::LBrace)?;

        let mut agents = Vec::new();
        let mut workflows = Vec::new();

        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            if self.check(TokenKind::Ident) && self.peek_literal() == Some("agents") {
                self.advance();
                self.expect(TokenKind::Colon)?;
                self.expect(TokenKind::LBracket)?;
                while !self.check(TokenKind::RBracket) && !self.is_at_end() {
                    agents.push(self.parse_ident()?);
                    if !self.check(TokenKind::RBracket) {
                        self.expect(TokenKind::Comma)?;
                    }
                }
                self.expect(TokenKind::RBracket)?;
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Workflow) {
                workflows.push(self.parse_workflow_decl()?);
            } else {
                return Err(self.error("ensemble body item"));
            }
        }

        self.expect(TokenKind::RBrace)?;
        let span = self.span_from(start);

        Ok(EnsembleDecl {
            name,
            agents,
            workflows,
            span,
        })
    }

    fn parse_workflow_decl(&mut self) -> ParseResult<WorkflowDecl> {
        let start = self.current_span();
        self.expect(TokenKind::Workflow)?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::LParen)?;
        let params = self.parse_param_list()?;
        self.expect(TokenKind::RParen)?;

        let return_type = if self.check(TokenKind::Arrow) {
            self.advance();
            Some(self.parse_type()?)
        } else {
            None
        };

        let body = self.parse_block()?;
        let span = self.span_from(start);

        Ok(WorkflowDecl {
            name,
            params,
            return_type,
            body,
            span,
        })
    }

    fn parse_orchestrate_decl(&mut self) -> ParseResult<OrchestrationDecl> {
        let start = self.current_span();
        self.expect(TokenKind::Orchestrate)?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::LBrace)?;

        let mut agents = Vec::new();
        let mut fusion = FusionRule::Dempster; // default
        let mut consensus = ConsensusRule::Unanimous; // default
        let mut topology = TopologyType::FullyConnected; // default

        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            if self.check(TokenKind::Ident) && self.peek_literal() == Some("agents") {
                // Parse agents: [Agent1(arg), Agent2()]
                self.advance();
                self.expect(TokenKind::Colon)?;
                self.expect(TokenKind::LBracket)?;
                while !self.check(TokenKind::RBracket) && !self.is_at_end() {
                    let agent_name = self.parse_ident()?;
                    self.expect(TokenKind::LParen)?;
                    let config_args = if !self.check(TokenKind::RParen) {
                        self.parse_expr_list()?
                    } else {
                        Vec::new()
                    };
                    self.expect(TokenKind::RParen)?;
                    agents.push(AgentSpec {
                        name: agent_name,
                        config_args,
                        span: start,
                    });
                    if !self.check(TokenKind::RBracket) {
                        self.expect(TokenKind::Comma)?;
                    }
                }
                self.expect(TokenKind::RBracket)?;
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Fusion) {
                // Parse fusion: Dempster | Yager | DuboisPrade
                self.advance();
                self.expect(TokenKind::Colon)?;
                let fusion_name = self.parse_ident()?;
                fusion = match fusion_name.name.as_str() {
                    "Dempster" => FusionRule::Dempster,
                    "Yager" => FusionRule::Yager,
                    "DuboisPrade" => FusionRule::DuboisPrade,
                    _ => FusionRule::Custom(fusion_name.name),
                };
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Consensus) {
                // Parse consensus: Threshold(0.7) | Unanimous | Quorum(2, 3)
                self.advance();
                self.expect(TokenKind::Colon)?;
                let consensus_name = self.parse_ident()?;
                match consensus_name.name.as_str() {
                    "Threshold" => {
                        self.expect(TokenKind::LParen)?;
                        if let Expr::Literal(Literal::Float(threshold, _)) = self.parse_primary_expr()? {
                            consensus = ConsensusRule::Threshold(threshold);
                        } else {
                            return Err(self.error("float threshold value"));
                        }
                        self.expect(TokenKind::RParen)?;
                    }
                    "Unanimous" => {
                        consensus = ConsensusRule::Unanimous;
                    }
                    "Quorum" => {
                        self.expect(TokenKind::LParen)?;
                        if let Expr::Literal(Literal::Int(required, _)) = self.parse_primary_expr()? {
                            self.expect(TokenKind::Comma)?;
                            if let Expr::Literal(Literal::Int(total, _)) = self.parse_primary_expr()? {
                                consensus = ConsensusRule::Quorum(required, total);
                            } else {
                                return Err(self.error("total quorum count"));
                            }
                        } else {
                            return Err(self.error("required quorum count"));
                        }
                        self.expect(TokenKind::RParen)?;
                    }
                    _ => return Err(self.error("valid consensus rule")),
                }
                self.expect(TokenKind::Comma)?;
            } else if self.check(TokenKind::Topology) {
                // Parse topology: Ring | Star | FullyConnected | Custom
                self.advance();
                self.expect(TokenKind::Colon)?;
                let topology_name = self.parse_ident()?;
                topology = match topology_name.name.as_str() {
                    "Ring" => TopologyType::Ring,
                    "Star" => TopologyType::Star,
                    "FullyConnected" => TopologyType::FullyConnected,
                    _ => TopologyType::Custom(topology_name.name),
                };
                if !self.check(TokenKind::RBrace) {
                    self.expect(TokenKind::Comma)?;
                }
            } else {
                return Err(self.error("orchestration config item"));
            }
        }

        self.expect(TokenKind::RBrace)?;
        let span = self.span_from(start);

        Ok(OrchestrationDecl {
            name,
            agents,
            fusion,
            consensus,
            topology,
            span,
        })
    }

    // ============================================
    // Function Declaration
    // ============================================

    fn parse_fn_decl(&mut self, mut modifiers: Vec<FnModifier>) -> ParseResult<FnDecl> {
        let start = self.current_span();

        // Check for async modifier
        if self.check(TokenKind::Ident) && self.peek_literal() == Some("async") {
            self.advance();
            modifiers.push(FnModifier::Async);
        }

        self.expect(TokenKind::Fn)?;
        let name = self.parse_ident()?;
        self.expect(TokenKind::LParen)?;
        let params = self.parse_param_list()?;
        self.expect(TokenKind::RParen)?;
